apps/vikunja/templates/vikunja-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  rules:
  - host: vikunja2.greyroom.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  vikunja
            port:
              number: 3456
  tls:
  - secretName: vikunja-general-tls
